# module/auth/auth.swagger.yml
@@ -140,7 +140,7 @@ paths:
                 identifier:
                   type: string
                   description: ایمیل یا شماره موبایل کاربر
-                  example: "09123456789"
+                  example: "emta137671@gmail.com"
       responses:
         200:
           description: OTP sent successfully
@@ -164,6 +164,81 @@ paths:
                       status:
                         type: integer
                         example: 200
+                  data:
+                    type: object
+                    example: {}
+
+  /api/v1/auth/verify-otp:
+    post:
+      summary: Verify OTP code
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - code
+                - identifier
+              properties:
+                code:
+                  type: string
+                  example: "123456"
+                  description: کد یکبار مصرف ارسال شده
+                identifier:
+                  type: string
+                  example: "emta137671@gmail.com"
+                  description: ایمیل یا شماره موبایل کاربر
+      responses:
+        200:
+          description: OTP verified successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  message:
+                    type: object
+                    properties:
+                      fa:
+                        type: string
+                        example: "کد با موفقیت تأیید شد"
+                      en:
+                        type: string
+                        example: "OTP verified successfully"
+                      status:
+                        type: integer
+                        example: 200
+                  data:
+                    type: object
+                    example: {}
+        400:
+          description: OTP verification failed
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: object
+                    properties:
+                      fa:
+                        type: string
+                        example: "کد وارد شده صحیح نیست یا منقضی شده است"
+                      en:
+                        type: string
+                        example: "Invalid or expired OTP"
+                      status:
+                        type: integer
+                        example: 400
                   data:
                     type: object
                     example: {}
